<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/cad_title"
            android:textColor="@color/colorAccent"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/cad_content"
            android:textColor="@color/colorDarkerGray"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryMid"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cad_button_positive"
                android:textColor="@color/colorDarkerGray"
                android:textSize="18sp"
                app:rippleColor="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorPrimaryMid"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cad_button_negative"
                android:textColor="@color/colorDarkerGray"
                android:textSize="18sp"
                app:rippleColor="@color/colorAccent" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>




