<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="edge"
            type="com.sertancanpolat.downloaderforinsta.model.helper_class.Edge" />

        <variable
            name="url"
            type="java.lang.String" />

        <variable
            name="downloadListener"
            type="com.sertancanpolat.downloaderforinsta.adapter.PDAItemDownloadButton" />

        <variable
            name="shareListener"
            type="com.sertancanpolat.downloaderforinsta.adapter.PDAItemShareButton" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryMid">

        <ImageView
            android:id="@+id/pda_item_postImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/pda_image_item_content_image"
            android:downloadIsCircle="@{false}"
            android:downloadUrl="@{url}"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pda_item_postImage"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pda_item_downloadPostImage"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="5"
                android:backgroundTint="@color/colorPrimaryDark"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{(view) -> downloadListener.downloadButtonClicked(view, url, false)}"
                android:paddingVertical="20dp"
                android:text="@string/pda_item_download"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="0dp" />

            <ImageButton
                android:id="@+id/pda_item_share_buttonImage"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/share_button"
                android:onClick="@{(view) -> shareListener.shareButtonClicked(view, url)}"
                android:padding="10dp"
                android:src="@drawable/ic_share" />
        </LinearLayout>


    </RelativeLayout>
</layout>



