<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userModel"
            type="com.sertancanpolat.downloaderforinsta.models.UserModel.Graphql.User" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.UserActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:expandedTitleGravity="center|bottom"
                    app:expandedTitleMarginBottom="25dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        app:contentInsetStart="0dp"
                        app:contentInsetStartWithNavigation="0dp"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/Theme.MaterialComponents.Light" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/infoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fitsSystemWindows="true"
                        android:paddingBottom="?actionBarSize">

                        <ImageView
                            android:id="@+id/imgUser"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/sra_item_row_img_content_profile_pic"
                            android:downloadIsCircle="@{true}"
                            android:downloadUrl="@{userModel.profilePicUrlHd}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@{userModel.fullName}"
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imgUser" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:text="@string/ua_info_txt_followers"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toStartOf="@+id/textView5"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtName" />

                        <TextView
                            android:id="@+id/txtFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:singleLine="true"
                            android:text="@{Integer.toString(userModel.edgeFollowedBy.count)}"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/textView3"
                            app:layout_constraintStart_toStartOf="@+id/textView3"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/ua_info_txt_following"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/textView3"
                            app:layout_constraintTop_toTopOf="@+id/textView3" />

                        <TextView
                            android:id="@+id/txtFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{Integer.toString(userModel.edgeFollow.count)}"
                            android:singleLine="true"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/textView5"
                            app:layout_constraintStart_toStartOf="@+id/textView5"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:text="@string/ua_info_txt_posts"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtFollowers" />

                        <TextView
                            android:id="@+id/txtPosts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:singleLine="true"
                            android:text="@{Integer.toString(userModel.edgeOwnerToTimelineMedia.count)}"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/textView7"
                            app:layout_constraintStart_toStartOf="@+id/textView7"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:id="@+id/dataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPosts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:scrollbarSize="3dp"
                    android:scrollbarThumbVertical="@color/colorAccent"
                    android:scrollbars="vertical"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtPrivate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/ua_txt_private"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/info_text_size"
                    android:visibility="visible" />

            </RelativeLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ua_error_text"
            android:textColor="@color/colorDarkerGray"
            android:textSize="@dimen/error_text_size"
            android:visibility="gone" />

    </FrameLayout>
</layout>
